# TMB

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG  LICENSE  README.md  environment.yml  new_environment.yml  pyproject.toml  run.sh
.github/workflows/: python-publish.yml
config/: annovar.yml  annovar_102015.yml  annovar_dragon.yml  calling.yml  databases.yml  mutect2.yml  snpeff.yml  snpeff_seqoia.yml  snpeff_vegan.yml  strelka.yml  varscan2.yml  vep.yml
pytmb/: __init__.py  config.py  filters.py  genome_size.py  tmb.py  vcf_utils.py
pytmb/cli/: __init__.py  run_effgenomesize.py  run_tmb.py
test/: conftest.py  test_config.py  test_filters.py  test_genome_size.py  test_tmb.py
test-op/dragon/: D320_tmb_results_DRAGON.tsv  TMB_D320_results.tsv  run.sh
test-op/dragon/results/: D326_tmb_results_DRAGON.tsv
test-op/seqoia/: run.sh
test/SHIVA01/: test_shiva.sh
test/dragon/: dragon_design_v2.bed
test/dragon/results/: TMB_D326_results_v1.2.0.tsv
test/panel/: addRec.py
test/seqoia/: run.sh
test/wes/: test.sh
